[gd_scene load_steps=3 format=3 uid="uid://r2mchdb2drmr"]

[ext_resource type="Script" path="res://ui/ingame_ui.gd" id="1_3pd4a"]
[ext_resource type="Texture2D" uid="uid://bnlk6bskdcfxu" path="res://assets/image/fullmoon.png" id="1_fkoed"]

[node name="IngameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3pd4a")
metadata/_edit_horizontal_guides_ = [16.0]

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Control" type="Control" parent="MarginContainer"]
layout_mode = 2

[node name="EnemyLeftBar" type="ProgressBar" parent="MarginContainer/Control"]
visible = false
self_modulate = Color(0.984314, 0.207843, 0.454902, 1)
custom_minimum_size = Vector2(300, 20)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 2.0
offset_right = 150.0
offset_bottom = 22.0
grow_horizontal = 2
size_flags_horizontal = 4
value = 50.0
rounded = true
show_percentage = false

[node name="Label" type="Label" parent="MarginContainer/Control/EnemyLeftBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 16
text = "69"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Phase" type="Label" parent="MarginContainer/Control/EnemyLeftBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 20.5
offset_bottom = 23.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 16
text = "Defense Phase"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PreparationTimeLeftBar" type="ProgressBar" parent="MarginContainer/Control"]
self_modulate = Color(0.278431, 0.929412, 0.996078, 1)
custom_minimum_size = Vector2(300, 20)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 2.0
offset_right = 150.0
offset_bottom = 22.0
grow_horizontal = 2
size_flags_horizontal = 4
max_value = 30.0
value = 30.0
show_percentage = false

[node name="Label" type="Label" parent="MarginContainer/Control/PreparationTimeLeftBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 16
text = "69"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Phase" type="Label" parent="MarginContainer/Control/PreparationTimeLeftBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 20.5
offset_bottom = 23.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 16
text = "Preparation Phase"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -86.0
offset_top = -4.5
offset_right = -56.0
offset_bottom = 25.5
grow_horizontal = 0
size_flags_horizontal = 8
size_flags_vertical = 0
texture = ExtResource("1_fkoed")
expand_mode = 1

[node name="PlayerCurrencyCount" type="Label" parent="MarginContainer/Control/TextureRect"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 35.0
offset_top = -10.0
offset_right = 161.0
offset_bottom = 13.0
grow_vertical = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "12345"

[node name="Waves" type="Label" parent="MarginContainer/Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Wave 1"
